model evaluation and mlflow implementation

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,13 @@ cython_debug/
 #.idea/
 
 artifacts/*
+
+# MLflow
+mlruns/
+mlartifacts/
+outputs/
+mlruns.db
+**/basic_auth.db
+
+# Jupyter Notebook
+.ipynb_checkpoints
